# boost-reflection

./: CMakeLists.txt  README.md  build.bat  package.bat  test.bat
boost/reflection/: class.hpp  reflection.hpp
boost/reflection/detail/: method_template.hpp
libs/reflection/example/: CMakeLists.txt
libs/reflection/example/ioc/: CMakeLists.txt  bar.xml  bar_driver.cpp  driver_interface.hpp  driver_manager.xml  foo.xml  foo_driver.cpp  ioc.cpp  ioc.hpp  test_ioc.cpp
libs/reflection/example/ioc/mvc/: CMakeLists.txt  mvc_common.hpp  mvc_controller_foo.cpp  mvc_default_dispatcher.cpp  mvc_dispatcher.xml  mvc_dispatcher_interface.hpp  test_annotation_mvc.cpp
libs/reflection/src/: CMakeLists.txt  class.cpp
libs/reflection/test/: CMakeLists.txt  test_annotation.cpp  test_container.cpp  test_proxy.cpp
libs/reflection/test/test_refleciton/: CMakeLists.txt  libtest.cpp  main.cpp  main_use_dl.cpp  main_use_lib.cpp  sample_classes.hpp  test_interface.hpp  test_reflection.hpp
